--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.12",
     "apexcharts": "^3.41.0",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
