--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
 mangum = "^0.17.0"
+python-dotenv = "^1.0.1"
+boto3 = "^1.34.103"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
